Update based on the feedback from the client

--- a/2017/2017-02/2017-02-27/source/160x600.css
+++ b/2017/2017-02/2017-02-27/source/160x600.css
@@ -305,14 +305,14 @@
 }
 .cta {
   background: url('./images/160x600_cta.png') no-repeat center center;
-  width: 128px;
+  width: 150px;
   height: 32px;
-  left: 16px;
+  left: 5px;
   bottom: 19px;
 
-  -webkit-animation: fadeInDown 0.5s ease-in-out 3.75s forwards;
-  -moz-animation: fadeInDown 0.5s ease-in-out 3.75s forwards;
-  animation: fadeInDown 0.5s ease-in-out 3.75s forwards;
+  -webkit-animation: fadeInUp 0.5s ease-in-out 8s forwards;
+  -moz-animation: fadeInUp 0.5s ease-in-out 8s forwards;
+  animation: fadeInUp 0.5s ease-in-out 8s forwards;
 }
 .image-container {
   -webkit-animation: fadeOutDown 0.75s ease-in-out 6.25s forwards;
@@ -345,15 +345,4 @@
   -webkit-animation: fadeInUp 0.75s ease-in-out 6.75s forwards;
   -moz-animation: fadeInUp 0.75s ease-in-out 6.75s forwards;
   animation: fadeInUp 0.75s ease-in-out 6.75s forwards;
-}
-.cta2 {
-  background: url('./images/160x600_cta2.png') no-repeat center center;
-  width: 128px;
-  height: 32px;
-  left: 16px;
-  bottom: 19px;
-
-  -webkit-animation: fadeIn 0.75s ease-in-out 8s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 8s forwards;
-  animation: fadeIn 0.75s ease-in-out 8s forwards;
 }
