--- a/2017/2017-02/2017-02-27/source/300x250.css
+++ b/2017/2017-02/2017-02-27/source/300x250.css
@@ -304,14 +304,14 @@
 }
 .cta {
   background: url('./images/300x250_cta.png') no-repeat center center;
-  width: 116px;
+  width: 135px;
   height: 29px;
-  left: 166px;
+  left: 158px;
   bottom: 18px;
 
-  -webkit-animation: fadeInDown 0.5s ease-in-out 3.75s forwards;
-  -moz-animation: fadeInDown 0.5s ease-in-out 3.75s forwards;
-  animation: fadeInDown 0.5s ease-in-out 3.75s forwards;
+  -webkit-animation: fadeInUp 0.5s ease-in-out 8s forwards;
+  -moz-animation: fadeInUp 0.5s ease-in-out 8s forwards;
+  animation: fadeInUp 0.5s ease-in-out 8s forwards;
 }
 
 .image-container {
@@ -345,15 +345,4 @@
   -webkit-animation: fadeInUp 0.75s ease-in-out 6.75s forwards;
   -moz-animation: fadeInUp 0.75s ease-in-out 6.75s forwards;
   animation: fadeInUp 0.75s ease-in-out 6.75s forwards;
-}
-.cta2 {
-  background: url('./images/300x250_cta2.png') no-repeat center center;
-  width: 116px;
-  height: 29px;
-  left: 166px;
-  bottom: 18px;
-
-  -webkit-animation: fadeIn 0.75s ease-in-out 8s forwards;
-  -moz-animation: fadeIn 0.75s ease-in-out 8s forwards;
-  animation: fadeIn 0.75s ease-in-out 8s forwards;
 }
